--- a/src/index.html
+++ b/src/index.html
@@ -8,17 +8,14 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <load ="partials/header.html" />
-
-    <section>
-      <h1>Lorem ipsum dolor sit amet.</h1>
-      <!-- Path to images as from index.html file -->
-      <img src="./img/javascript.svg" alt="" />
-    </section>
-
-    <!-- Loads the specified .html file -->
-    <load ="partials/vite-promo.html" />
-
+     <form id="searchForm">
+      <input type="text" id="searchInput" placeholder="Enter your search query" required>
+      <button type="submit">Search</button>
+    </form>
+    <div id="loadingIndicator" class="hidden"><span class="loader"></span></div>
+    <ul id="gallery" class="gallery"></ul>
+  </div>
+    
     <script type="module" src="./main.js"></script>
   </body>
 </html>
