--- a/src/index.html
+++ b/src/index.html
@@ -8,14 +8,25 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-     <form id="searchForm">
-      <input type="text" id="searchInput" placeholder="Enter your search query" required>
-      <button type="submit">Search</button>
-    </form>
-    <div id="loadingIndicator" class="hidden"><span class="loader"></span></div>
-    <ul id="gallery" class="gallery"></ul>
-  </div>
-    
+    <div class="wraper">
+      <form class="search-form" id="search-form">
+        <input
+          class="search-form-input"
+          type="text"
+          id="search-form-input"
+          placeholder="Search images..."
+        /><button
+          class="search-form-button"
+          type="submit"
+          id="search-form-button"
+        >
+          Search
+        </button>
+      </form>
+    </div>
+    <span class="loader" id="loader"></span>
+    <ul class="gallery"></ul>
+
     <script type="module" src="./main.js"></script>
   </body>
 </html>
